# pentacle

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: file.rs  lib.rs  syscall.rs
tests/: ensure_sealed.rs  spawn.rs
