[package]
name = "pentacle"
version = "1.0.0"
edition = "2018"
exclude = [".github", ".gitignore"]
description = "Executes programs as sealed anonymous files on Linux"
repository = "https://github.com/haha-business/pentacle"
readme = "README.md"
keywords = ["command", "exec", "memfd", "memfd_create", "seal"]
license = "MIT"

[dependencies]
libc = "0.2.99"
log = "0.4.4"

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
