[package]
name = "pentacle"
version = "1.0.0"
edition = "2021"
rust-version = "1.59"
description = "Executes programs as sealed anonymous files on Linux"
readme = "README.md"
repository = "https://github.com/haha-business/pentacle"
license = "MIT"
keywords = ["command", "exec", "memfd", "memfd_create", "seal"]
exclude = [".github", ".gitignore"]

[dependencies]
libc = "0.2.153"
log = "0.4.4"

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
