[package]
name = "pentacle"
version = "1.1.0"
edition = "2021"
rust-version = "1.59"
description = "Executes programs as sealed anonymous files on Linux"
readme = "README.md"
repository = "https://github.com/haha-business/pentacle"
license = "MIT"
keywords = ["command", "exec", "memfd", "memfd_create", "seal"]
exclude = [".github", ".gitignore"]

[dependencies]
libc = "0.2.153"
log = { version = "0.4.4", optional = true }

[features]
default = ["log"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(coverage_nightly)"]

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
